# sigan

./: README.md  pyproject.toml  requirements.txt
sigan/: config.json  config.py  constants.py  sigan.py
sigan/api/: api.py
sigan/commands/: command.py
sigan/utils/: display.py  general_utils.py  time_utils.py
