[tool.poetry]
name = "sigan"
version = "0.1.22"
description = "version update"
authors = ["Earthquakoo <cream5343@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
sigan = "sigan.sigan:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
slack-sdk = "^3.23.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.21"
rich = "^13.6.0"
pymysql = "^1.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
